platformforge/templates/backend-metrics-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend-metrics
  namespace: platformforge
  labels:
    app: backend

spec:
  selector:
    app: backend

  ports:
    - name: metrics
      port: 80
      targetPort: 8080
