platformforge/templates/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend-service
  namespace: platformforge

spec:
  selector:
    app: backend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001

  type: ClusterIP
