platformforge/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: platformforge-ingress
  namespace: platformforge

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix

            backend:
              service:
                name: backend-service
                port:
                  number: 80

          - path: /
            pathType: Prefix

            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          
          - path: /metrics
            pathType: Prefix

            backend:
              service:
                name: backend-metrics
                port:
                  number: 80
